--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -7,7 +7,7 @@
 
 @misc{Kaggle2016,
       author = {Kaggle},
-      title = {House Prices},
+      title = {Ames Housing Dataset},
       year = {2016},
-      note = {data retrieved from the Kaggle website,
+      note = {Data retrieved from the Kaggle website,
               \url{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/data}}}
