--- a/analysis/exploratory_data_analysis/Exploratory_Data_Analysis.Rmd
+++ b/analysis/exploratory_data_analysis/Exploratory_Data_Analysis.Rmd
@@ -14,9 +14,13 @@ knitr::opts_chunk$set(echo = TRUE)
 # Setup
 
 ```{r message=FALSE}
+# libraries
 library(tidyverse)
 library(naniar)
 library(Hmisc)
+
+# helper files
+source('../helper/data_munging.R')
 ```
 
 # Initial Data Exploration
@@ -128,21 +132,6 @@ test.missing.summary %>%
 5 of the features, `PoolQC`, `MiscFeature`, `Alley`, `Fence`, and `FireplaceQu`, have very high missing rates in both sets of data. It seems unlikely that these features would provide value as imbuing values for the missing values would likely bias the training set towards the imbued value. The feature LotFrontage is missing at a rate of ~17% and ~ 15% in the training and testing set respectively. This is also a fairly high missing rate, but the usefulness of the feature should be investigated. Fortunately, the rate of missingness for each feature is approximately the same between the training and testing datasets.
 
 ## Correlation of Numeric Features (Training Set)
-
-```{r}
-# Helper for flattening the correlation matrix
-# from:
-# http://www.sthda.com/english/wiki/correlation-matrix-a-quick-start-guide-to-analyze-format-and-visualize-a-correlation-matrix-using-r-software
-flattenCorrMatrix <- function(cormat, pmat) {
-  ut <- upper.tri(cormat)
-  data.frame(
-    row = rownames(cormat)[row(cormat)[ut]],
-    column = rownames(cormat)[col(cormat)[ut]],
-    cor  =(cormat)[ut],
-    p = pmat[ut]
-    )
-}
-```
 
 ```{r}
 train.dropna <- train.numeric %>% drop_na() %>% select(-one_of(c('SalePrice')))
