--- a/analysis/studies/question1.Rmd
+++ b/analysis/studies/question1.Rmd
@@ -21,7 +21,7 @@ Century 21 Ames wawnts to understand if there is a relationship between the squa
 # libraries
 library(knitr)
 library(tidyverse)
-library(recipes)
+library(olsrr)
 
 # load data
 train <- read_csv('../data/train.csv')
@@ -30,7 +30,7 @@ test <- read_csv('../data/test.csv')
 
 # Analysis
 
-## Build the Model
+## Extract Data of Interest
 
 ```{r results='hide', message=FALSE}
 # select data of interest
@@ -40,53 +40,130 @@ train <- train %>%
 train$Neighborhood <- as.factor(train$Neighborhood)
 ```
 
-### Plots of Data
+## Plots of Data
 
 Histogram of `SalePrice`, which is the sale price of the houses in the dataset.
 
 ```{r, message=FALSE}
 train %>% ggplot(aes(x = SalePrice)) +
-  geom_histogram()
+  geom_histogram() + 
+  labs(title = 'Histogram of Sale Price', 
+       y = 'Frequency', x = 'Sale Price')
 ```
 
 Histogram of `GrLivArea`, which is the square footage of the living areas of houses in the dataset.
 
 ```{r, message=FALSE}
 train %>% ggplot(aes(x = GrLivArea)) +
-  geom_histogram()
+  geom_histogram() + 
+  labs(title = 'Histogram of Living Room Area', 
+       y = 'Frequency', x = 'Living Room Area')
+```
+
+Both variables (`SalePrice` and `GrLivArea`) show evidence of right skew. This could indicate need for a log transform.
+
+Scatter plot of `SalePrice` vs `GrLivArea` shows that the large values in `GrLivArea` are pulling the regression line. A log transfrom on `GrLivArea` may help correct this.
+
+```{r}
+train %>% ggplot(aes(x = GrLivArea, y = SalePrice)) +
+  geom_point() +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Sale Price vs Living Room Area', 
+       y = 'Log of Sale Price', x = 'Living Room Area')
+```
+
+Scatter plot of `SalePrice` vs log transform of `GrLivArea` shows taking the log transform of `GrLivArea` does improve the linear relationship. However, it appears that a larger value of `GrLivArea` is associated with an increase in varaince of `SalePrice`. A log transform of `SalePrice` may help control for this change in varaince.
+
+```{r}
+train %>% ggplot(aes(x = log(GrLivArea), y = SalePrice)) +
+  geom_point() +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Sale Price vs Log of Living Room Area', 
+       y = 'Sale Price', x = 'Log of Living Room Area')
+```
+
+Scatter plot the log transform of `SalePrice` vs the log transform of `GrLivArea` shows evidece of a linear relationship without sufficient evidence of changing variance.
+
+```{r}
+train %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
+  geom_point() +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Log of Sale Price vs Lof of Living Room Area', 
+       y = 'Log of Sale Price', x = 'Log of Living Room Area')
 ```
 
 Barplot of `Neighborhood`, which is the square footage of the living areas of houses in the dataset.
 
 ```{r, message=FALSE}
-train %>% ggplot(aes(x = Neighborhood)) +
-  geom_bar()
+train %>% ggplot(aes(x = Neighborhood)) + geom_bar() + 
+  labs(title = 'Count of Levels of Neighborhood', 
+       y = 'Count')
 ```
 
-### Model
+```{r, dummy_creation}
+# create dummy variables with Neighborhood == 'Edwards' as reference
+train$Neighborhood_BrkSide <-  as.numeric(train$Neighborhood == 'BrkSide')
+train$Neighborhood_NAmes <-  as.numeric(train$Neighborhood == 'NAmes')
+```
+
+## Model
+
+Based on the log-log plot above, the response will be modeled as
+
+![model_equation](./question1_files/model_equation.png)
 
 ```{r, message=FALSE}
-lm(SalePrice ~  GrLivArea, data = train) %>% summary()
+# model the mean response given equation above
+model <- lm(formula = log(SalePrice) ~ log(GrLivArea) + 
+     Neighborhood_BrkSide + 
+     Neighborhood_NAmes +
+     log(GrLivArea) * Neighborhood_BrkSide + 
+     log(GrLivArea) * Neighborhood_NAmes, data = train)
+summary(model)
 ```
+
+## Model Assumption Assessment
 
 ```{r}
-dum <- train %>% 
-  recipe(~ .) %>% 
-  step_dummy(Neighborhood) %>%
-  prep(training = train) %>% 
-  bake(newdata = train)
-dum
-```
-
-```{r, message=FALSE}
-lm(SalePrice ~  GrLivArea + 
-     Neighborhood_Edwards + 
-     Neighborhood_NAmes +
-     GrLivArea * Neighborhood_Edwards + 
-     GrLivArea * Neighborhood_NAmes, data = dum) %>% summary()
+# get predicted values
+train$Predicted <- predict(model, train[,c('GrLivArea','Neighborhood_BrkSide','Neighborhood_NAmes')])
+train$Resid <- model$residuals
 ```
 
 
+### Normality
+
+```{r}
+qqnorm(model$residuals)
+hist(model$residuals)
+```
+
+### Linear Trend
+
+```{r}
+train %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
+  geom_point() +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Log of Sale Price vs Lof of Living Room Area', 
+       y = 'Log of Sale Price', x = 'Log of Living Room Area')
+```
+
+### Equal Variances
+
+```{r}
+train %>% ggplot(aes(x = Predicted, y = Resid)) +
+  geom_point() +
+  geom_abline(slope = 0)
+```
+
+### Other Plots
+
+```{r, assumption_plots}
+# Rstudent vs leverage
+ols_plot_resid_lev(model)
+ols_plot_resid_stand(model)
+ols_plot_cooksd_bar(model)
+```
 
 
 
@@ -97,8 +174,7 @@ lm(SalePrice ~  GrLivArea +
 
 
 
-
-
+$$ASE = \frac{\sum_{n=1}^{N} (y_i - \hat{y}_i)^2 }{N}$$
 
 
 
