--- a/analysis/studies/question1.Rmd
+++ b/analysis/studies/question1.Rmd
@@ -17,7 +17,7 @@ Century 21 Ames wawnts to understand if there is a relationship between the squa
 
 # Setup
 
-```{r results='hide', message=FALSE}
+```{r, lib-read, results='hide', message=FALSE}
 # libraries
 library(knitr)
 library(tidyverse)
@@ -32,19 +32,27 @@ test <- read_csv('../data/test.csv')
 
 ## Extract Data of Interest
 
-```{r results='hide', message=FALSE}
+```{r data-filtering, results='hide', message=FALSE}
 # select data of interest
 train <- train %>% 
-  select(c('SalePrice','GrLivArea','Neighborhood')) %>%
+#  select(c('SalePrice','GrLivArea','Neighborhood')) %>%
   filter(Neighborhood == 'NAmes' | Neighborhood == 'Edwards' | Neighborhood == 'BrkSide')
 train$Neighborhood <- as.factor(train$Neighborhood)
 ```
 
 ## Plots of Data
 
-Histogram of `SalePrice`, which is the sale price of the houses in the dataset.
+Barplot of count houses in `Neighborhood`s of interest.
 
 ```{r, message=FALSE}
+train %>% ggplot(aes(x = Neighborhood)) + geom_bar() + 
+  labs(title = 'Count of Levels of Neighborhood', 
+       y = 'Count')
+```
+
+Histogram of `SalePrice`, which is the sale price of the houses in the dataset.
+
+```{r, SalePriceHist, message=FALSE}
 train %>% ggplot(aes(x = SalePrice)) +
   geom_histogram() + 
   labs(title = 'Histogram of Sale Price', 
@@ -53,7 +61,7 @@ train %>% ggplot(aes(x = SalePrice)) +
 
 Histogram of `GrLivArea`, which is the square footage of the living areas of houses in the dataset.
 
-```{r, message=FALSE}
+```{r, LivingRoomHist, message=FALSE}
 train %>% ggplot(aes(x = GrLivArea)) +
   geom_histogram() + 
   labs(title = 'Histogram of Living Room Area', 
@@ -64,9 +72,9 @@ Both variables (`SalePrice` and `GrLivArea`) show evidence of right skew. This c
 
 Scatter plot of `SalePrice` vs `GrLivArea` shows that the large values in `GrLivArea` are pulling the regression line. A log transfrom on `GrLivArea` may help correct this.
 
-```{r}
+```{r, regression-original-scale}
 train %>% ggplot(aes(x = GrLivArea, y = SalePrice)) +
-  geom_point() +
+  geom_point(alpha = 0.3) +
   geom_smooth(method = 'lm') + 
   labs(title = 'Sale Price vs Living Room Area', 
        y = 'Log of Sale Price', x = 'Living Room Area')
@@ -74,36 +82,46 @@ train %>% ggplot(aes(x = GrLivArea, y = SalePrice)) +
 
 Scatter plot of `SalePrice` vs log transform of `GrLivArea` shows taking the log transform of `GrLivArea` does improve the linear relationship. However, it appears that a larger value of `GrLivArea` is associated with an increase in varaince of `SalePrice`. A log transform of `SalePrice` may help control for this change in varaince.
 
-```{r}
+```{r, linear-log-plot}
 train %>% ggplot(aes(x = log(GrLivArea), y = SalePrice)) +
-  geom_point() +
+  geom_point(alpha = 0.3) +
   geom_smooth(method = 'lm') + 
   labs(title = 'Sale Price vs Log of Living Room Area', 
        y = 'Sale Price', x = 'Log of Living Room Area')
 ```
 
-Scatter plot the log transform of `SalePrice` vs the log transform of `GrLivArea` shows evidece of a linear relationship without sufficient evidence of changing variance.
+Scatter plot the log transform of `SalePrice` vs the log transform of `GrLivArea` shows evidece of a linear relationship without sufficient evidence of changing variance. Two points to the right side of the plot appear to be pulling the regression line to the right. These points should be investigated.
 
-```{r}
+```{r, log-log-plot}
 train %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
-  geom_point() +
+  geom_point(alpha = 0.3) +
   geom_smooth(method = 'lm') + 
-  labs(title = 'Log of Sale Price vs Lof of Living Room Area', 
+  labs(title = 'Log of Sale Price vs Log of Living Room Area', 
        y = 'Log of Sale Price', x = 'Log of Living Room Area')
 ```
 
-Barplot of `Neighborhood`, which is the square footage of the living areas of houses in the dataset.
+Add labels of `SaleCondition` of the two points of interest and some neighboring points to the scatter plot the log transform of `SalePrice` vs the log transform of `GrLivArea`. This indicates the influential points are of type `Partial` `SaleCondition`, which means the houses were not completed at the time of assessment.
 
-```{r, message=FALSE}
-train %>% ggplot(aes(x = Neighborhood)) + geom_bar() + 
-  labs(title = 'Count of Levels of Neighborhood', 
-       y = 'Count')
+```{r, log-log-plot-labeled}
+train %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
+  geom_point(alpha = 0.3) +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Log of Sale Price vs Log of Living Room Area', 
+       y = 'Log of Sale Price', x = 'Log of Living Room Area') +
+  geom_text(aes(label = ifelse((log(GrLivArea) > 7.75 & log(SalePrice) > 11) |
+                                 (log(SalePrice) > 12.45),
+                               SaleCondition, '')), hjust=0, vjust=0)
 ```
 
-```{r, dummy_creation}
-# create dummy variables with Neighborhood == 'Edwards' as reference
-train$Neighborhood_BrkSide <-  as.numeric(train$Neighborhood == 'BrkSide')
-train$Neighborhood_NAmes <-  as.numeric(train$Neighborhood == 'NAmes')
+Reploting without the influential values as little difference on the regression line. These points will be included in the regression analysis.
+
+```{r, repolt-without-partial-points}
+temp <- train %>% filter(SaleCondition != 'Partial')
+temp %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
+  geom_point(alpha = 0.3) +
+  geom_smooth(method = 'lm') + 
+  labs(title = 'Log of Sale Price vs Log of Living Room Area', 
+       y = 'Log of Sale Price', x = 'Log of Living Room Area')
 ```
 
 ## Model
@@ -114,7 +132,11 @@ Based on the log-log plot above, the response will be modeled as
 
 where Edwards neighborhood is used for reference.
 
-```{r, message=FALSE}
+```{r, modeling, message=FALSE}
+# create dummy variables with Neighborhood == 'Edwards' as reference
+train$Neighborhood_BrkSide <-  as.numeric(train$Neighborhood == 'BrkSide')
+train$Neighborhood_NAmes <-  as.numeric(train$Neighborhood == 'NAmes')
+
 # model the mean response given equation above
 model <- lm(formula = log(SalePrice) ~ log(GrLivArea) + 
      Neighborhood_BrkSide + 
@@ -144,7 +166,7 @@ hist(model$residuals)
 
 ```{r}
 train %>% ggplot(aes(x = log(GrLivArea), y = log(SalePrice))) +
-  geom_point() +
+  geom_point(alpha = 0.3) +
   geom_smooth(method = 'lm') + 
   labs(title = 'Log of Sale Price vs Lof of Living Room Area', 
        y = 'Log of Sale Price', x = 'Log of Living Room Area')
