Add assumptions verbiage Add TODO for conclusion Remove setup code

--- a/analysis/studies/question1.Rmd
+++ b/analysis/studies/question1.Rmd
@@ -13,11 +13,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Requested Analysis
 
-Century 21 Ames wawnts to understand if there is a relationship between the square footage of the living areas of houses (`GrLivArea`) and sale price in the neighborhood where they operate Northwest Ames, Edwards, and Brookside (`NAmes`, `Edwards` and `BrkSide`).
+Century 21 Ames wants to understand if there is a relationship between the square footage of the living areas of houses (`GrLivArea`) and sale price in the neighborhood where they operate Northwest Ames, Edwards, and Brookside (`NAmes`, `Edwards` and `BrkSide`).
 
-# Setup
-
-```{r, lib-read, results='hide', message=FALSE}
+```{r, lib-read, results='hide', message=FALSE, include=FALSE}
+### Compuational Setup
 # libraries
 library(knitr)
 library(tidyverse)
@@ -183,6 +182,7 @@ train <- get.dummies(train, "Neighborhood", 'Edwards')
 # model the mean response given equation above
 model <- lm(formula = model.formula, data = train)
 summary(model)
+confint(model)
 ```
 
 ### Model Accuracy Estimation
@@ -209,13 +209,16 @@ PCV <- PRESS.cv(model.cv)
 # print accuracy metrics to md table
 kable(data.frame('RMSE'=res$RMSE,
            'CV Press'=PCV,
-           'Adjused_R_Squared'=res$Rsquared))
+           'Adjused R Squared'=res$Rsquared))
 ```
 
 
 ## Model Assumptions Assessment
 
-
+* **Linearity**: It appear reasonable that the log of sale price and the log of living room area could be linearly related based on a scatter plot.
+* **Normality**: The residuals from the model fit appear to be normally distributed based on a histogram and qq plot.
+* **Constant Variance**: There is no discernable pattern from a scatter plot of residuals and studentized residuals plotted vs predicted value.
+* **Independence**: It is not clear how the data was sampled. We will assume this is true and continue.
 
 ```{r, diag-plots}
 basic.fit.plots(train, model)
@@ -224,7 +227,19 @@ ols_plot_cooksd_bar(model)
 ```
 
 
+## Conclusion
 
+TODO
+
+* Provide model
+* Interpretation
+  * Statistally significant relationship between edwards neighborhood and sale price
+  * No statistical difference between Edwards and Northwest Ames
+  * Statistical difference between Edwards and Brook Side
+* Scope
+  * Unknown sampling method -> no extension
+  * Observational
+  
 
 
 
